# STAR_DrawerBoxFW

./: CMakeLists.txt  partitions.csv  realeaseNote.txt  sdkconfig.defaults
components/: defines.h
components/BLE/: CMakeLists.txt  ble.c  ble.h
components/CUI/: CMakeLists.txt  cui.c  cui.h  defines.h
components/Controller/: CMakeLists.txt  CompulsionSw1.c  CompulsionSw1.h  CompulsionSw2.c  CompulsionSw2.h  Controller.c  Controller.h  Drawer1.c  Drawer1.h  Drawer1ConnSensor.c  Drawer1ConnSensor.h  Drawer2.c  Drawer2.h  Drawer2ConnSensor.c  Drawer2ConnSensor.h  Drawer3.c  Drawer3.h  Drawer3ConnSensor.c  Drawer3ConnSensor.h  Drawer4.c  Drawer4.h  Drawer4ConnSensor.c  Drawer4ConnSensor.h  defines.h  parameter.h
components/Ethernet/: CMakeLists.txt  ethernet.c  ethernet.h
components/USB_CDC/: CMakeLists.txt  usb_cdc.c  usb_cdc.h
components/Wifi/: CMakeLists.txt  wifi.c  wifi.h
components/espressif__tinyusb/: .component_hash  idf_component.yml
main/: CMakeLists.txt  idf_component.yml  main.c
